2005-04-05  Bastien Nocera  <hadess@hadess.net>

	* data/totem.1: update the man page

2005-04-05  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* data/totem.schemas.in:
	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_set_subtitle_font), (cb_gconf),
	(bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_subtitle_font):
	* src/backend/bacon-video-widget.h:
	* src/totem-preferences.c: (on_font_set), (font_changed_cb),
	(totem_setup_preferences):

	Add the ability to choose subtitle fonts (patch by Ronald S. Bultje
	<rbultje@ronald.bitfreak.net>) (Closes: #166993)

2005-04-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-message-connection.c: (setup_connection), (server_cb),
	(try_server), (bacon_message_connection_free):
	  Close left-over connections better.
	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.cpp:
	* src/totem-mozilla-scriptable.h:
	  Better shutdown handling. Makes it virtually possible to open
	  the plugin, go to another webpage with more media etc. without
	  murdering your children. Should fix (and does, for me) #172476,
	  and includes the fix in #172473 from Christian Persch
	  <chpe@gnome.org> for releasing references to scriptable
	  instances at the right time.
	* src/totem-mozilla-viewer.c: (on_got_redirect), (main):
	  Don't call gdk_threads_init() because for some reason it
	  hangs my mozilla at some point.

2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_current_frame):
	  Fix stride.

2005-04-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	  Remove some completed stuff.

2005-04-02  Jan Schmidt,,,  <thaytan@mad.scientist.com>

	* src/totem-menu.c: (totem_sublang_equal_lists),
	(totem_languages_update), (totem_subtitles_update),
	(totem_sublang_update):
	  Fix list equality checking and double-freeing
