@@ -1,3 +1,7 @@
+2005-04-07  Bastien Nocera  <hadess@hadess.net>
+
+	* en_GB.po: fixed the parsing errors
+
 2005-04-06  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
