@@ -1,3 +1,9 @@
+2005-04-07  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-statusbar.c: (totem_statusbar_init):
+	Avoid the progress bar changing the height of the status bar
+	(Closes: #172812)
+
 2005-04-05  Bastien Nocera  <hadess@hadess.net>
 
 	* data/totem.1: update the man page
